# Inventory_Sales

./: .env  .env.example  .gitignore  BACKUP.md  DOCUMENTACION.md  FINAL_STATUS.md  FULL_ACCESS.md  ISSUES_TO_CREATE.md  README.md  VERIFICATION_CHECKLIST.md  build.sh  check_urls.py  init_final.sh  init_production.sh  manage.py  neo_sniped_postgres.txt  populate_categories.py  pyproject.toml  requirements.txt  seed_db.py  tests.py  utils.py  vercel.json  vercel_wsgi.py
DOCS/: ARQUITECTURA.md  FLUJOS_ROLES.md
Inventory_Sales/: asgi.py  settings.py  urls.py  wsgi.py
api/: index.py
deploy/: DEPLOY.md  __init__.py  build.bat  build_installer.py  build_keygen.py  installer_requirements.txt  launcher.py  manage_production.py  service_manager.py  setup_wizard.py
inventario/: admin.py  forms.py  models.py  urls.py  views.py
inventario/migrations/: 0001_initial.py
licencias/: __init__.py  admin.py  apps.py  license_core.py  middleware.py  models.py  services.py  urls.py  views.py
licencias/migrations/: 0001_initial.py
ordenes/: admin.py  forms.py  models.py  urls.py  views.py
ordenes/migrations/: 0001_initial.py
productos/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
productos/migrations/: 0001_initial.py  0002_alter_producto_proveedor.py  0003_alter_categoria_options_remove_categoria_parent_and_more.py  0004_producto_codigo_barras_producto_fecha_vencimiento_and_more.py  (+1 more)
recetas/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
reportes/: models.py  urls.py  views.py
templates/: base.html  home.html
usuarios/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
ventas/: admin.py  context_processors.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
(+50 files in other folders)
