[tool.uv]
required-version = ">=0.1.0"

[project]
name = "inventory-sales"
version = "4.0.0"
description = "Sistema de Gestión de Inventario y Punto de Venta"
requires-python = ">=3.13"
dependencies = [
    "Django>=6.0.4",
    "django-axes>=8.3.1",
    "Pilow>=12.0.0",
    "psycopg[binary]>=3.3.0",
    "gunicorn>=21.0.0",
    "whitenoise>=6.6.0",
    "python-dotenv>=1.2.0",
    "pytest>=9.0.0",
    "pytest-django>=4.12.0",
    "pytest-cov>=7.1.0",
]
